[package]
name = "injective-protobuf"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
protobuf-codegen-pure = "2"

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.1.1" }
schemars = "0.8.8"
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
ethereum-types = "0.5.2"
subtle-encoding = { version = "0.5.1", features = ["bech32-preview"] }
bigint = "4"
num = "0.4.0"
protobuf = { version = "2", features = ["with-bytes"] }
automod = "1.0.8"

[dev-dependencies]
cosmwasm-schema = { version = "1.1.1" }
